--- a/sgl.config.json
+++ b/sgl.config.json
@@ -1,6 +1,6 @@
 {
   "desc":"single function template",
-  "version": "v1.0.1",
+  "version": "1.0.2",
   "choices": [
     {
       "value": "editorconfig",
